--- a/scalus-site/content/transaction-builder/building-first-transaction.mdx
+++ b/scalus-site/content/transaction-builder/building-first-transaction.mdx
@@ -14,24 +14,55 @@ This guide walks you through building a simple Cardano transaction using Scalus 
 
 ## Set Up the `CardanoInfo`
 
-First, choose an instance of `CardanoInfo` with the protocol parameters, network, and slot configuration:
+`CardanoInfo` encapsulates everything TxBuilder needs to construct valid transactions:
+- **Protocol parameters** for fee calculation, execution limits, and deposits
+- **Network** identifier (Mainnet or Testnet) for address validation
+- **Slot configuration** for time-based validity constraints
+
+### Pre-built Configurations
+
+Scalus provides ready-to-use configurations with embedded protocol parameters:
 
 ```scala copy
 import scalus.cardano.ledger.*
 import scalus.cardano.txbuilder.*
 
-// For mainnet
+// Mainnet (production)
 val cardanoInfo = CardanoInfo.mainnet
 
-// For preview testnet
-val preview = CardanoInfo(
-  protocolParams = previewParams, // queried from elsewhere
+// Preprod testnet
+val preprodInfo = CardanoInfo.preprod
+
+// Preview testnet
+val previewInfo = CardanoInfo.preview
+```
+
+### Custom Configuration (Yaci DevKit Example)
+
+For local development with Yaci DevKit or other custom environments, load protocol parameters from JSON and configure the slot timing:
+
+```scala copy
+// Load params from Blockfrost API or cardano-cli
+val params = ProtocolParams.fromBlockfrostJson(blockfrostJsonString)
+// Or: ProtocolParams.fromCardanoCliJson(cliJsonString)
+
+// Yaci DevKit uses slot length of 1 second and start time of 0
+val yaciSlotConfig = SlotConfig(
+  zeroTime = 0L,
+  zeroSlot = 0L,
+  slotLength = 1000
+)
+
+val yaciDevKit = CardanoInfo(
+  protocolParams = params,
   network = Network.Testnet,
-  slotConfig = SlotConfig.Preview
+  slotConfig = yaciSlotConfig
 )
 ```
 
-TxBuilder depends on the general Cardano Info to construct valid transactions.
+<Callout type="info">
+  The pre-built configurations use embedded protocol parameters that are updated periodically. For production use, consider querying current parameters from a node or API.
+</Callout>
 
 ## Working with Addresses
 
